Формирование EventShortDto для вложенных коллекций подборок.